feat: add label to dropdown component

--- a/src/components/dropdown/dropdown.module.css
+++ b/src/components/dropdown/dropdown.module.css
@@ -1,3 +1,11 @@
 .dropdownContainer:hover {
     background-color: transparent;
 }
+
+.dropdownButton:hover {
+    background-color: transparent !important;
+}
+
+.dropdownLabel {
+    display: block;
+}
