fix: change display type in dropdown option item button

--- a/src/components/dropdown/dropdown.module.css
+++ b/src/components/dropdown/dropdown.module.css
@@ -2,10 +2,15 @@
     background-color: transparent;
 }
 
+.dropdownLabel {
+    display: block;
+}
+
 .dropdownButton:hover {
     background-color: transparent !important;
 }
 
-.dropdownLabel {
-    display: block;
+.dropdownOptionItemContainer {
+    display: inline-flex !important;
+    align-items: center;
 }
