--- a/src/components/medicationCard/medicationCard.module.css
+++ b/src/components/medicationCard/medicationCard.module.css
@@ -6,6 +6,22 @@
     margin-bottom: 8px;
 }
 
+.medicationInactiveCardRow {
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.medicationInactiveName {
+    display: inline-flex;
+    align-items: center;
+}
+
+.medicationInactiveText {
+    margin: 0px;
+}
+
 .medicationCardButtonsRow {
     display: flex;
     align-items: center;
